# pipes-ordered-zip

./: Changelog.md  LICENSE  README.md  example.hs  example2.hs  pipes-ordered-zip.cabal  stack.yaml
src-tests/: testMain.hs
src/Pipes/: OrderedZip.hs
test/Pipes/: OrderedZipSpec.hs
